# labradorcli

./: .PSScriptAnalyzerSettings.psd1  .clippy.toml  .dockerignore  .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LABRADOR.md  NOTICE  README.md  SECURITY.md  about.hbs  about.toml  cargo-bundle  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  feature_flag_cleanup.yml  release-bundles.yml
.labrador/workflows/: build_image_and_start_container_for_ssh_testing.yaml  cherrypick_into_release.yaml  copy_keychain_to_labrador_local.yaml  create_feature_release_pr.yaml  run_integration_test.yaml  run_labrador_with_shell.yaml  run_labrador_with_version_and_channel.yaml  run_unit_test.yaml  script_bundle_temp.yaml  start_new_task.yaml
app/: Cargo.toml  build.rs
app/DockTilePlugin/: Info.plist  LabradorDockTilePlugin.h  LabradorDockTilePlugin.m  Makefile  README.md
app/examples/: generate_default_settings.rs
app/src/: app_menus.rs  app_state.rs  appearance.rs  channel.rs  coding_panel_enablement_state.rs  crash_recovery.rs  debounce.rs  debug_dump.rs  download_method.rs  features.rs  font_fallback.rs  global_resource_handles.rs  gpu_state.rs  input_classifier.rs  input_suggestions.rs  input_suggestions_test.rs  interval_timer.rs  keyboard.rs  keyboard_test.rs  labrador_managed_paths_watcher.rs  lib.rs  linear.rs  menu.rs  menu_test.rs  modal.rs  network.rs  notification.rs  palette.rs  preview_config_migration.rs  preview_config_migration_tests.rs  profiling.rs  projects.rs  resource_limits.rs  reward_view.rs  root_view.rs  root_view_tests.rs  search_bar.rs  session_management.rs  system.rs  tab.rs  (+6 more)
crates/ai/: Cargo.toml
crates/app-installation-detection/: Cargo.toml
crates/asset_cache/: Cargo.toml
crates/asset_macro/: Cargo.toml
crates/command-signatures-v2/: build.rs
crates/computer_use/: Cargo.toml
crates/editor/: Cargo.toml
crates/firebase/: Cargo.toml
crates/fuzzy_match/: Cargo.toml
crates/graphql/: Cargo.toml  build.rs
crates/handlebars/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_server/: Cargo.toml
crates/input_classifier/: Cargo.toml
crates/integration/: Cargo.toml
crates/ipc/: Cargo.toml
crates/isolation_platform/: Cargo.toml
crates/jsonrpc/: Cargo.toml
crates/labrador_cli/: Cargo.toml  build.rs
crates/labrador_cli/src/: completions.rs  config_file.rs  environment.rs  integration.rs  lib.rs  lib_tests.rs  model.rs  schedule.rs  share.rs  share_tests.rs  skill.rs  skill_tests.rs
crates/labrador_completer/: Cargo.toml
crates/labrador_core/: Cargo.toml
crates/labrador_features/: Cargo.toml
crates/labrador_files/: Cargo.toml
crates/labrador_files/src/: lib.rs  lib_test.rs
crates/labrador_graphql_schema/: Cargo.toml  build.rs  graphql.config.js
crates/labrador_js/: Cargo.toml
crates/labrador_logging/: Cargo.toml
crates/labrador_ripgrep/: Cargo.toml
crates/languages/: Cargo.toml
crates/languages/grammars/: README.md
crates/languages/grammars/starlark/: config.yaml
crates/languages/src/: lib.rs
crates/simple_logger/: Cargo.toml
crates/simple_logger/src/: lib.rs  manager.rs  manager_tests.rs
crates/syntax_tree/: Cargo.toml
crates/syntax_tree/src/: lib.rs
crates/syntax_tree/src/queries/: highlight_query.rs  indent_query.rs  indent_query_tests.rs
crates/vim/: Cargo.toml
crates/vim/src/: find_char.rs  matching_brackets.rs  paragraph_iterator.rs  vim.rs  word_iterator.rs
crates/vim/src/text_objects/: block.rs  paragraph.rs  quote.rs  word.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: home_watcher.rs  lib.rs
script/: Entitlements.plist  compile_icon  deploy_remote_server  install_cargo_build_deps  install_cargo_release_deps  install_cargo_test_deps  install_channel_config  patch_font_with_labrador_glyph  prepare_bundled_pprof  prepare_bundled_resources  presubmit  run  test_welcome  update_plist
site/: 404.html  README.md  _headers  _redirects  index.html  robots.txt  script.js  sitemap.xml  styles.css
(+2218 files in other folders)
