[package]
name = "labrador_cli"
edition = "2024"
description = "CLI argument parsing for Labrador"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
cfg-if = { workspace = true }
humantime.workspace = true
jaq-all.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
labrador_core = { path = "../labrador_core" }
color-print = "0.3"
labrador_util = { path = "../labrador_util" }
clap_complete = "4.5.58"
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation"
] }

[build-dependencies]
cfg_aliases.workspace = true

[features]
plugin_host = []
integration_tests = []
api_key_authentication = []

[dev-dependencies]
serial_test = "0.8.0"
