[package]
name = "labrador_files"
version = "0.1.0"
edition = "2021"
authors = ["Labrador Team <beefiker@gmail.com>"]
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-channel.workspace = true
async-fs.workspace = true
futures.workspace = true
thiserror.workspace = true
labrador_ui.workspace = true
remote_server.workspace = true
labrador_core.workspace = true
labrador_util.workspace = true
watcher.workspace = true
notify-debouncer-full.workspace = true
repo_metadata.workspace = true
log.workspace = true

[features]
test-util = []

[dev-dependencies]
async-channel.workspace = true
tempfile.workspace = true
