[package]
name = "languages"
edition = "2021"
authors = ["Labrador Team <beefiker@gmail.com>"]
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
rust-embed.workspace = true
arborium.workspace = true
lazy_static.workspace = true
labrador_editor = { path = "../editor" }
