[package]
name = "syntax_tree"
version = "0.1.0"
edition = "2021"
authors = ["Labrador Team <beefiker@gmail.com>"]
publish.workspace = true
license.workspace = true

[dependencies]
rangemap.workspace = true
arborium.workspace = true
labrador_ui.workspace = true
labrador_editor.workspace = true
languages.workspace = true
futures.workspace = true
futures-lite.workspace = true
parking_lot.workspace = true
log.workspace = true
string-offset.workspace = true
streaming-iterator = "0.1.9"
labrador_util.workspace = true

[dev-dependencies]
labrador_editor = { workspace = true, features = ["test-util"] }
labrador_ui = { workspace = true, features = ["test-util"] }
