[package]
name = "watcher"
version = "0.1.0"
edition = "2021"
authors = ["Labrador Team <beefiker@gmail.com>"]
publish.workspace = true
license.workspace = true

[dependencies]
async-channel.workspace = true
labrador_ui.workspace = true
log.workspace = true
anyhow.workspace = true
notify-debouncer-full.workspace = true
futures.workspace = true
